[package]
name = "recycle-box"
# When incrementing version and releasing to crates.io:
# - Update crate version in README.md
# - Update CHANGELOG.md
# - Update if necessary copyright notice in LICENSE-MIT
# - Create a "vX.Y.Z" git tag
version = "0.1.0"
authors = ["Serge Barral <serge.barral@asynchronics.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asynchronics/recycle-box"
readme = "README.md"
description = """
A pointer type for heap-allocated objects which heap storage can be re-used, with Pin support.
"""
categories = ["memory-management"]
keywords = ["box", "reuse", "recycle", "pin", "futures"]
